force-app/main/default/objects/ppmail__Mail_Event__c.object
<CustomObject>
    <fields>
        <fullName>ppmail__Categories__c</fullName>
        <label>Categories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__Event_Date_Time__c</fullName>
        <formula>IF(ppmail__Timestamp__c &lt;&gt; 0, FROMUNIXTIME(ppmail__Timestamp__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ppmail__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__Mail_Sending_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Sending Batch</label>
        <referenceTo>ppmail__Mail_Sending_Batch__c</referenceTo>
        <relationshipLabel>Mail Events</relationshipLabel>
        <relationshipName>Mail_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ppmail__Mail_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Tracking</label>
        <referenceTo>ppmail__Mail_Tracking__c</referenceTo>
        <relationshipLabel>Mail Events</relationshipLabel>
        <relationshipName>Mail_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ppmail__Payload__c</fullName>
        <label>Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__Source__c</fullName>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ppmail__Mail_Service</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ppmail__Timestamp__c</fullName>
        <label>Timestamp</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppmail__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Mail Event</label>
    <listViews>
        <fullName>ppmail__All_Mail_Events</fullName>
        <columns>ppmail__Event_Date_Time__c</columns>
        <columns>NAME</columns>
        <columns>ppmail__Type__c</columns>
        <columns>ppmail__Email__c</columns>
        <columns>ppmail__Mail_Sending_Batch__c</columns>
        <columns>ppmail__Mail_Tracking__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Mail Events</label>
    </listViews>
    <nameField>
        <displayFormat>MEVT-{000000000}</displayFormat>
        <label>Mail Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mail Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>